@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.4.3.ebuild,v 1.6 2012/11/11 17:56:10 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.4.3.ebuild,v 1.7 2012/12/26 07:50:42 slyfox Exp $
 
 CABAL_FEATURES="lib profile haddock"
 inherit base haskell-cabal
@@ -27,3 +27,5 @@ RDEPEND=">=dev-lang/ghc-6.10
 DEPEND="${RDEPEND}"
 
 PATCHES=("${FILESDIR}"/${P}-ghc-7.4.patch)
+
+HCFLAGS+=" -O0" #427838
