@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.4.4.ebuild,v 1.3 2012/11/11 17:56:10 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.4.4.ebuild,v 1.4 2012/12/26 07:50:42 slyfox Exp $
 
 # ebuild generated by hackport 0.2.13
 
@@ -30,6 +30,8 @@ DEPEND="${RDEPEND}
 PATCHES=("${FILESDIR}"/${PN}-0.4.3-ghc-7.4.patch)
 
 src_configure() {
+	[[ $(ghc-version) == "6.12.3" ]] && HCFLAGS+=" -O0" #427838
+
 	cabal_src_configure \
 		$(cabal_flag generic) \
 		$(cabal_flag parsec) \
