@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.5.ebuild,v 1.2 2012/09/12 14:57:34 qnikst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.5.ebuild,v 1.3 2012/12/26 07:50:42 slyfox Exp $
 
 # ebuild generated by hackport 0.2.13
 
@@ -28,6 +28,8 @@ DEPEND="${RDEPEND}
 		>=dev-haskell/cabal-1.2.0"
 
 src_configure() {
+	[[ $(ghc-version) == "6.12.3" ]] && HCFLAGS+=" -O0" #427838
+
 	cabal_src_configure \
 		$(cabal_flag generic) \
 		$(cabal_flag parsec) \
