@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.7.ebuild,v 1.1 2012/11/18 14:05:07 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/json/json-0.7.ebuild,v 1.2 2012/12/26 07:50:42 slyfox Exp $
 
 EAPI=5
 
@@ -27,6 +27,8 @@ DEPEND="${RDEPEND}
 		>=dev-haskell/cabal-1.2.0"
 
 src_configure() {
+	[[ $(ghc-version) == "6.12.3" ]] && HCFLAGS+=" -O0" #427838
+
 	cabal_src_configure \
 		$(cabal_flag generic) \
 		$(cabal_flag parsec) \
